# PaperWatch

./: README.md  pyproject.toml
src/: BookmarkManager.py  Config.py  ConfigEditorWidget.py  DOI2Bib.py  Entry.py  EntryCard.py  EntryInfoWidget.py  LineEdit.py  PaperWatch.py  SidePanel.py  Statusbar.py  bookmarks.json  config.toml  main.py
